@@ -115,6 +115,42 @@ function test32()
 	ASSERT.equal(0x6d, data[2]);
 }
 
+function test64()
+{
+	var data = new Buffer(10);
+	var value = 0x0007cda8e7f90a6d;
+	var high = Math.floor(value / Math.pow(2, 32));
+	var low = value - (high * Math.pow(2, 32));
+	ASSERT.equal(0x0007cda8, high);
+	ASSERT.equal(0xe7f90a6d, low);
+
+	mod_ctype.wuint64([high, low], 'big', data, 0);
+	ASSERT.equal(0x00, data[0]);
+	ASSERT.equal(0x07, data[1]);
+	ASSERT.equal(0xcd, data[2]);
+	ASSERT.equal(0xa8, data[3]);
+	ASSERT.equal(0xe7, data[4]);
+	ASSERT.equal(0xf9, data[5]);
+	ASSERT.equal(0x0a, data[6]);
+	ASSERT.equal(0x6d, data[7]);
+
+	mod_ctype.wuint64([high, low], 'little', data, 0);
+	ASSERT.equal(0x6d, data[0]);
+	ASSERT.equal(0x0a, data[1]);
+	ASSERT.equal(0xf9, data[2]);
+	ASSERT.equal(0xe7, data[3]);
+	ASSERT.equal(0xa8, data[4]);
+	ASSERT.equal(0xcd, data[5]);
+	ASSERT.equal(0x07, data[6]);
+	ASSERT.equal(0x00, data[7]);
+}
+
 test8();
 test16();
 test32();
+test64();
+
+exports.test8 = test8;
+exports.test16 = test16;
+exports.test32 = test32;
+exports.test64 = test64;
